// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineAlert renders with danger intent 1`] = `
<div
  className="root intent-danger"
>
  <div
    className="icon-container"
  >
    <Component
      fill="danger"
      iconName="ErrorCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with info intent 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with provided description 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="description"
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with provided title 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with provided title and description 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
    <div
      className="description"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with success intent 1`] = `
<div
  className="root intent-success"
>
  <div
    className="icon-container"
  >
    <Component
      fill="success"
      iconName="CheckCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with undefined intent 1`] = `
<div
  className="root intent-info"
>
  <div
    className="icon-container"
  >
    <Component
      fill="info"
      iconName="InfoCircleFilled"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`InlineAlert renders with warning intent 1`] = `
<div
  className="root intent-warning"
>
  <div
    className="icon-container"
  >
    <Component
      fill="warning"
      iconName="Caution"
      size="default"
    />
  </div>
  <div
    className="container"
  >
    <div
      className="title"
    >
      Hello world!
    </div>
  </div>
</div>
`;
